--- a/google.css
+++ b/google.css
@@ -4,10 +4,18 @@ html{
 
 * {
     box-sizing: border-box;
+    text-wrap: none;
 }
 
-#top-flex-container{
-    margin: 15px 15px 0px 15px;
+a{
+    color: rgb(61, 61, 61);
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
+
+navbar {
     display: flex;
     flex-direction: row;
     column-gap: 15px;
@@ -20,7 +28,7 @@ html{
     line-height: 30px;
 }
 
-#deadspace{
+.deadspace{
     width: 70vw;
 }
 
@@ -34,11 +42,67 @@ html{
     align-self: center;
 }
 #searchbar{
+    width: 600px;
+    height: 40px;
+    align-self: center;
+    border-radius: 50px;
+}
+
+.sbutton{
+    background-color: rgb(242,242, 242);
+    color: gray;
+    width: 100px;
+    height: 32.5px;
+    border-radius: 10px; 
+    border: none;
+    
+}
+.sbutton:hover{
+    border-color: rgb(242,242, 242);
+    background-color: gray);
+    color: gray;
+    width: 100px;
+    height: 32.5px;
+    border-radius: 10px;
+    border: solid;
+    border-color: 
 }
 
 #signbutton{
     background-color: rgb(78, 78, 255);
     color: white;
     width: 100px;
-    height: 40px;
+    height: 32.5px;
+    border-radius: 2.5px;
+    align-items: center;
+
+}
+
+#buttonholder{
+    width: 600px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;;
+    margin: auto;
+    margin-top: 20px;
+}
+
+footer{
+    padding: -10px -10px -10px -10px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+    justify-content: space-evenly;
+    width: 100vw;
+    height: 30px;
+    background-color: rgb(242, 242, 242);
+    font-size: small;
+    text-align: center;
+    line-height: 30px;
 }
